changes styles name

--- a/home.html
+++ b/home.html
@@ -29,9 +29,9 @@
     </header>
     <body>
         <div id="card_container">
-            <div class="adv_card">ee</div>
-            <div class="adv_card">ee</div>
-            <div class="adv_card">ee</div>
+            <div class="adv_card"></div>
+            <div class="adv_card"></div>
+            <div class="adv_card"></div>
         </div>
         
     </body>
