finished services section and did a dynamic banner

--- a/home.html
+++ b/home.html
@@ -28,10 +28,34 @@
         <p id="hslogan">Elevate Your Strength, Transform Your Life</p>
     </header>
     <body>
+        <div id="banner">
+            <p id="scrollingText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque dolorum qu</p>
+        </div>
         <div id="card_container">
-            <div class="adv_card"></div>
-            <div class="adv_card"></div>
-            <div class="adv_card"></div>
+            <div class="card">
+                <img src="imgs/gym-equipment.jpg" alt="">
+                <div class="text_container">
+                    <h1>Take Control of your Workouts</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati rem necessitatibus officia, officiis ipsa blanditiis quod fugit dolores veniam perferendis quos facilis dolor esse eaque molestias odit rerum soluta fugiat.</p>
+                    <a href=""><button>GO</button></a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="imgs/cardio.jpg" alt="">
+                <div class="text_container">
+                    <h1>Get in Touch with an Expert</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatibus soluta iste amet iusto molestiae dolore inventore similique reiciendis vel. Vel impedit aliquid esse maiores odit autem explicabo officia. Obcaecati?</p>
+                    <a href=""><button>GO</button></a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="imgs/nutrition.jpg" alt="">
+                <div class="text_container">
+                    <h1>Get Your Diet in Check</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias numquam suscipit minima! Illum nulla, laboriosam deleniti officiis doloribus quia tempora! Veniam cumque numquam minima doloremque inventore facilis perferendis, beatae tempore?</p>
+                    <a href=""><button>GO</button></a>
+                </div>
+            </div>
         </div>
         
     </body>
