--- a/home.html
+++ b/home.html
@@ -11,17 +11,17 @@
     <header>
         <img src="imgs/icon_black_background.png" alt="logo">
         <div class="nav">
-            <a href="">
+            <a href="#card_container">
                 Home
             </a>
             <a href="">
-                About Us
+                Login
+            </a>
+            <a href="">
+                Booking
             </a>
             <a href="">
                 Contact Us
-            </a>
-            <a href="">
-                Socials
             </a>
         </div>
         <p id="hname">Stride Fitness</p>
@@ -29,14 +29,14 @@
     </header>
     <body>
         <div id="banner">
-            <p id="scrollingText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque dolorum qu</p>
+            <p id="scrollingText">Fitness is not about being better than someone else. It’s about being better than you used to be</p>
         </div>
         <div id="card_container">
             <div class="card">
                 <img src="imgs/gym-equipment.jpg" alt="">
                 <div class="text_container">
                     <h1>Take Control of your Workouts</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati rem necessitatibus officia, officiis ipsa blanditiis quod fugit dolores veniam perferendis quos facilis dolor esse eaque molestias odit rerum soluta fugiat.</p>
+                    <p>Achieve more in less time with structured workouts designed for efficiency and results. Tailor each session to meet your goals—whether it's strength, endurance, or flexibility. Build a routine that empowers you to unlock new levels of fitness and feel your best.</p>
                     <a href=""><button>GO</button></a>
                 </div>
             </div>
@@ -44,7 +44,8 @@
                 <img src="imgs/cardio.jpg" alt="">
                 <div class="text_container">
                     <h1>Get in Touch with an Expert</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatibus soluta iste amet iusto molestiae dolore inventore similique reiciendis vel. Vel impedit aliquid esse maiores odit autem explicabo officia. Obcaecati?</p>
+                    <p>Need guidance? Connect with a certified fitness coach who can help you navigate your fitness journey with personalized insights and strategies. Our experts are here to support you, answer your questions, and help you stay on track toward your fitness goals.
+                    </p>
                     <a href=""><button>GO</button></a>
                 </div>
             </div>
@@ -52,7 +53,7 @@
                 <img src="imgs/nutrition.jpg" alt="">
                 <div class="text_container">
                     <h1>Get Your Diet in Check</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias numquam suscipit minima! Illum nulla, laboriosam deleniti officiis doloribus quia tempora! Veniam cumque numquam minima doloremque inventore facilis perferendis, beatae tempore?</p>
+                    <p>Optimize your health with our BMI calculator and personalized calorie plans designed just for you. Discover your ideal caloric intake to reach your goals—whether it’s weight loss, muscle gain, or maintaining a balanced lifestyle.</p>
                     <a href=""><button>GO</button></a>
                 </div>
             </div>
