Added links to login and workout pages on home

--- a/home.html
+++ b/home.html
@@ -15,13 +15,13 @@
                 Home
             </a>
             <a href="">
-                Login
+                Contact Us
             </a>
             <a href="">
                 Booking
             </a>
-            <a href="">
-                Contact Us
+            <a href="login.html">
+                Logout
             </a>
         </div>
         <p id="hname">Stride Fitness</p>
@@ -37,7 +37,7 @@
                 <div class="text_container">
                     <h1>Take Control of your Workouts</h1>
                     <p>Achieve more in less time with structured workouts designed for efficiency and results. Tailor each session to meet your goals—whether it's strength, endurance, or flexibility. Build a routine that empowers you to unlock new levels of fitness and feel your best.</p>
-                    <a href=""><button>GO</button></a>
+                    <a href="workout.html"><button>GO</button></a>
                 </div>
             </div>
             <div class="card">
