--- a/workout.html
+++ b/workout.html
@@ -10,7 +10,7 @@
 <body>
     <div id="sidebar">
         <!--<a href="home.html"><img src="./workoutassets/arrow.png" alt="backarrow" ></a>-->
-        <a href="" id="arrow">&#8592;</a>
+        <a href="home.html" id="arrow">&#8592;</a>
        <!-- <p><a href="">BMI</a></p> -->
     </div>
   
