--- a/workout.html
+++ b/workout.html
@@ -166,7 +166,7 @@
                 <li>Shoulder Press: 4 Sets 6-8 reps</li>
                 <li>Lateral Raises: 4 Sets 6-8 reps</li>
                 <li>Front Raises: 4 Sets 6-8 reps/li>
-                <li>tCable Face Pulls: 4 Sets 6-8 reps</li>
+                <li>Cable Face Pulls: 4 Sets 6-8 reps</li>
             </ul>
             <img src="./workoutassets/close-button.png" alt="close" id="close-shoulders">
         </div>
