Fixed design issues in home page

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 Booking
             </a>
             <a href="login.html">
-                Logout
+                Login
             </a>
         </div>
         <p id="hname">Stride Fitness</p>
@@ -31,6 +31,7 @@
         <div id="banner">
             <p id="scrollingText">Fitness is not about being better than someone else. It’s about being better than you used to be</p>
         </div>
+        <h1 id="services">Start your journey towards a healthy lifestyle </h1>
         <div id="card_container">
             <div class="card">
                 <img src="imgs/gym-equipment.jpg" alt="">
