--- a/about-us.html
+++ b/about-us.html
@@ -64,8 +64,7 @@
                         <i class="fa fa-star" id="star"></i>
                         <i class="fa fa-star" id="star"></i>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur officia
-                        recusandae porro at?</p>
+                    <p>Amazing services would definitely recommend!</p>
                 </div>
 
                 <div class="review-item">
@@ -77,8 +76,7 @@
                         <i class="fa fa-star" id="star"></i>
                         <i class="fa fa-star" id="star"></i>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur officia
-                        recusandae porro at?</p>
+                    <p>Instructors are available for help all the time! 10/10 services.</p>
                 </div>
 
                 <div class="review-item">
@@ -91,8 +89,7 @@
                         <i class="fa fa-star" id="star"></i>
                         <i class="fa fa-star" id="star"></i>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur officia
-                        recusandae porro at?</p>
+                    <p>This definitely helped me achieve my fitness goals. I genuinely recommend this.</p>
                 </div>
             </div>
         </div>
