Finalized Booking Page

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                 Contact Us
             </a>
             <a href="">
-                Booking
+                About Us
             </a>
             <a href="login.html">
                 Login
@@ -47,7 +47,7 @@
                     <h1>Get in Touch with an Expert</h1>
                     <p>Need guidance? Connect with a certified fitness coach who can help you navigate your fitness journey with personalized insights and strategies. Our experts are here to support you, answer your questions, and help you stay on track toward your fitness goals.
                     </p>
-                    <a href=""><button>GO</button></a>
+                    <a href="booking.html"><button>GO</button></a>
                 </div>
             </div>
             <div class="card">
