--- a/about-us.html
+++ b/about-us.html
@@ -13,18 +13,16 @@
 <body>
     <header>
         <div class="nav">
-            <a href="#card_container">
+            <a href="/home.html">
                 Home
             </a>
-            <a href="">
+            <a href="/contact-us.html">
                 Contact Us
             </a>
-            <a href="">
+            <a href="/booking.html">
                 Booking
             </a>
-            <a href="login.html">
-                Login
-            </a>
+    
         </div>
         <p id="hname">About Us</p>
         <p id="hslogan">Elevate Your Strength, Transform Your Life</p>
@@ -45,7 +43,7 @@
             <p>Unlock your potential with our expert Personal Trainers.</p>
             <p>Elevate your fitness with practice sessions.</p>
             <p>We provide Supportive management, for your fitness success.</p>
-            <button id="btn1">Book</button>
+            <a href="/booking.html"><button id="btn1">Book</button></a>
         </div>
     </section>
 
