--- a/booking.html
+++ b/booking.html
@@ -12,16 +12,16 @@
         <div id="nav-container">
             <img src="imgs/logo white background.png" width="50px" alt="">
             <div class="nav">
-                <a href="home.html">
+                <a href="/home.html">
                     Home
                 </a>
-                <a href="">
+                <a href="/contact-us.html">
                     Contact Us
                 </a>
-                <a href="">
+                <a href="/about-us.html">
                     About Us
                 </a>
-                <a href="login.html">
+                <a href="/login.html">
                     Login
                 </a>
             </div>
