--- a/workout.html
+++ b/workout.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div id="sidebar">
-        <!--<a href="home.html"><img src="./workoutassets/arrow.png" alt="backarrow" ></a>-->
-        <a href="home.html" id="arrow">&#8592;</a>
-       <!-- <p><a href="">BMI</a></p> -->
+        <a href="/home.html" id="arrow">&#8592;</a>
     </div>
   
     <main>
