--- a/contact-us.html
+++ b/contact-us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="/contact-us.css">
+    <script src="/contact-us.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -34,7 +35,7 @@
                 </div> 
                 <label>Message</label>
                 <textarea rows="5" placeholder="Your Message"></textarea>
-                <button type="submit">SEND</button>
+                <button type="submit" id="btn">SEND</button>
                 </form> 
                 
             </div>  
@@ -120,5 +121,10 @@
         </div>
         <img id="flogo" src="imgs/logo black background.png" alt="">
         </footer>
+        <link rel="stylesheet" href="jquery-ui-1.14.1/jquery-ui.css">
+    <link rel="stylesheet" href="jquery-ui-1.14.1/jquery-ui.js">
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js" integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>
 </body>
 </html>
