--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
             <a href="#card_container">
                 Home
             </a>
-            <a href="">
+            <a href="/contact-us.html">
                 Contact Us
             </a>
-            <a href="">
+            <a href="/about-us.html">
                 About Us
             </a>
-            <a href="login.html">
+            <a href="/login.html">
                 Login
             </a>
         </div>
