added if logged in feature

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 <div class="text_container">
                     <h1>Take Control of your Workouts</h1>
                     <p>Achieve more in less time with structured workouts designed for efficiency and results. Tailor each session to meet your goals—whether it's strength, endurance, or flexibility. Build a routine that empowers you to unlock new levels of fitness and feel your best.</p>
-                    <a href="workout.html"><button>GO</button></a>
+                    <a href="workout.html"><button class="protected-link">GO</button></a>
                 </div>
             </div>
             <div class="card">
@@ -47,7 +47,7 @@
                     <h1>Get in Touch with an Expert</h1>
                     <p>Need guidance? Connect with a certified fitness coach who can help you navigate your fitness journey with personalized insights and strategies. Our experts are here to support you, answer your questions, and help you stay on track toward your fitness goals.
                     </p>
-                    <a href="booking.html"><button>GO</button></a>
+                    <a href="booking.html"><button class="protected-link">GO</button></a>
                 </div>
             </div>
             <div class="card">
@@ -55,7 +55,7 @@
                 <div class="text_container">
                     <h1>Get Your Diet in Check</h1>
                     <p>Optimize your health with our BMI calculator and personalized calorie plans designed just for you. Discover your ideal caloric intake to reach your goals—whether it’s weight loss, muscle gain, or maintaining a balanced lifestyle.</p>
-                    <a href=""><button>GO</button></a>
+                    <a href=""><button class="protected-link">GO</button></a>
                 </div>
             </div>
         </div>
@@ -118,5 +118,6 @@
     </div>
     <img id="flogo" src="imgs/logo black background.png" alt="">
     </footer>
+    <script src="home-script.js"></script>
 </body>
 </html>
