modified nav bar font

--- a/bmi.html
+++ b/bmi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMI Calculator with Meter</title>
+    <title>HealthCalc</title>
     <link rel="stylesheet" href="bmi.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
                 <p id="bmiResult">Your BMI: </p>
             </div>
         </div>
-        <h1 class="Calorie-header">Calorie Deficit Calculator</h1>
+        <h1 class="Calorie-header">Calorie Intake Calculator</h1>
         <div class="container2">
             <div class="panel2 left-panel2">
                 <h3>Weight Input</h3>
