linked home page to bmi

--- a/bmi.html
+++ b/bmi.html
@@ -10,7 +10,7 @@
     <header>
         <img src="imgs/icon_black_background.png" alt="logo">
         <div class="nav">
-            <a href="#card_container">
+            <a href="/home.html">
                 Home
             </a>
             <a href="/contact-us.html">
