--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
                 <div class="text_container">
                     <h1>Get Your Diet in Check</h1>
                     <p>Optimize your health with our BMI calculator and personalized calorie plans designed just for you. Discover your ideal caloric intake to reach your goals—whether it’s weight loss, muscle gain, or maintaining a balanced lifestyle.</p>
-                    <a href=""><button>GO</button></a>
+                    <a href="bmi.html"><button>GO</button></a>
                 </div>
             </div>
         </div>
