added back home button

--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <title>Stride</title>
 </head>
 <body>
+    <button class="homeButton" id="homeButton">&larr; Home</button>
     <div class="container" id="container">
         <div class="form-container sign-up">
             <form id="signUpForm">
@@ -18,7 +19,7 @@
                 <span class="error-message" id="signUpEmailError">Please enter a valid email.</span>
                 <input type="password" id="signUpPassword" placeholder="Password">
                 <span class="error-message" id="signUpPasswordError">Please enter a password.</span>
-                <button type="submit">Sign Up</button>
+                <button class="logging-buttons" type="submit">Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
@@ -28,7 +29,7 @@
                 <span class="error-message" id="signInEmailError">Please enter a valid email.</span>
                 <input type="password" id="signInPassword" placeholder="Password">
                 <span class="error-message" id="signInPasswordError">Please enter your password.</span>
-                <button type="submit">Sign In</button>
+                <button class="logging-buttons" type="submit">Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
