made inputs empty after button clicking on buttons in HealthCalc and changed bmi result to sentence

--- a/bmi.html
+++ b/bmi.html
@@ -43,7 +43,7 @@
                     <input type="number" id="height" placeholder="Height (cm)">
                     <button id="calculate-BMI">Calculate BMI</button>
                 </div>
-                <p id="bmiResult">Your BMI: </p>
+                <p id="bmiResult"></p>
             </div>
         </div>
         <h1 class="Calorie-header">Calorie Intake Calculator</h1>
